# task

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  annotated.html  any__env_8hpp_source.html  any__receiver__ref_8hpp_source.html  any__scheduler_8hpp_source.html  as__exception__ptr_8hpp_source.html  basic__task_8hpp_source.html  classbeman_1_1task_1_1basic__task-members.html  classbeman_1_1task_1_1basic__task.html  classbeman_1_1task_1_1basic__task_1_1promise__type-members.html  classbeman_1_1task_1_1basic__task_1_1promise__type.html  classbeman_1_1task_1_1basic__task_1_1promise__type__coll__graph.map  classbeman_1_1task_1_1basic__task_1_1promise__type__coll__graph.md5  classbeman_1_1task_1_1basic__task_1_1promise__type__inherit__graph.map  classbeman_1_1task_1_1basic__task_1_1promise__type__inherit__graph.md5  classbeman_1_1task_1_1detail_1_1any__env-members.html  classbeman_1_1task_1_1detail_1_1any__env.html  classbeman_1_1task_1_1detail_1_1any__receiver__ref-members.html  classbeman_1_1task_1_1detail_1_1any__receiver__ref.html  classbeman_1_1task_1_1detail_1_1any__receiver__ref_3_1_1beman_1_1execution26_1_1completion__sign013f97726688508740a3af79d39cc53a.html  classbeman_1_1task_1_1detail_1_1any__receiver__ref_3_1_1beman_1_1execution26_1_1completion__sign9e633e07600d80cf50273f580302792b.html  classbeman_1_1task_1_1detail_1_1any__scheduler-members.html  classbeman_1_1task_1_1detail_1_1any__scheduler.html  classbeman_1_1task_1_1detail_1_1env__implmentation.html  classbeman_1_1task_1_1detail_1_1env__implmentation_3_01Derived_00_01Interface_00_01Ret_07Args_8_8_8_08_00_01Queries_8_8_8_01_4.html  classbeman_1_1task_1_1detail_1_1env__implmentation_3_01Derived_00_01Interface_00_01Ret_07Args_8_98ea8ca4420d2d4e9843fae8c35b8a45.html  classbeman_1_1task_1_1detail_1_1env__implmentation_3_01Derived_00_01Interface_00_01Ret_07Args_8_a8146bbd57c221c5d580e23b57ba54ee.map  classbeman_1_1task_1_1detail_1_1env__implmentation_3_01Derived_00_01Interface_00_01Ret_07Args_8_a8146bbd57c221c5d580e23b57ba54ee.md5  classbeman_1_1task_1_1detail_1_1env__implmentation_3_01Derived_00_01Interface_01_4-members.html  classbeman_1_1task_1_1detail_1_1env__implmentation_3_01Derived_00_01Interface_01_4.html  classbeman_1_1task_1_1detail_1_1env__implmentation_3_01Derived_00_01Interface_01_4__coll__graph.map  classbeman_1_1task_1_1detail_1_1env__implmentation_3_01Derived_00_01Interface_01_4__coll__graph.md5  classbeman_1_1task_1_1detail_1_1env__interface-members.html  classbeman_1_1task_1_1detail_1_1env__interface.html  classbeman_1_1task_1_1detail_1_1env__interface__coll__graph.map  (+157 more)
.github/: CODEOWNERS
.github/workflows/: linux.yml
docs/: Doxyfile
search/: all_0.js  all_1.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_b.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_8.js  classes_a.js  concepts_0.js  searchdata.js
src/beman/task/: task.hpp
src/beman/task/detail/: any_env.hpp  any_receiver_ref.hpp  any_scheduler.hpp  as_exception_ptr.hpp  basic_task.hpp  env_implementation.hpp  env_interface.hpp  env_wrapper.hpp  has_query_for.hpp  join_envs.hpp  manual_lifetime.hpp  query_base.hpp  receiver_implementation.hpp  receiver_interface.hpp  scheduler_affine_context.hpp  set_value_for.hpp  task_promise_base.hpp  task_promise_env_base.hpp  task_promise_result_base.hpp  task_receiver_interface.hpp  with_query.hpp
tests/: CMakeLists.txt  task.test.cpp
